--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -12,5 +12,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CloudinarySettings": {
+    "CloudName": "djrgq7crf",
+    "ApiKey": "179856527445491",
+    "ApiSecret": "rTGnoxOwCPq6JSY3PvO19bkI6rw"
+  }
 }
